--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "email" : "dmitry@baranovskiy.com",
         "url"   : "http://dmitry.baranovskiy.com"
     },
-
-    "version" : "0.3.5",
+	"description" : "Simple custom events",
+    "version" : "0.4.0",
 
     "main"    : "./eve.js",
 
