--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name"    : "eve",
-
-    "author"  : {
-        "name"  : "Dmitry Baranovskiy",
-        "email" : "dmitry@baranovskiy.com",
-        "url"   : "http://dmitry.baranovskiy.com"
-    },
-	"description" : "Simple custom events",
-    "version" : "0.5.0",
-
-    "main"    : "./eve.js",
-
-    "repository": {
-        "type": "git",
-        "url": "git@github.com:adobe-webplatform/eve.git"
-    }
+  "name": "eve",
+  "author": {
+    "name": "Dmitry Baranovskiy",
+    "email": "dmitry@baranovskiy.com",
+    "url": "http://dmitry.baranovskiy.com"
+  },
+  "description": "Simple custom events",
+  "version": "0.5.1",
+  "main": "eve.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:adobe-webplatform/eve.git"
+  },
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-replace": "^0.8.0"
+  }
 }
