--- a/package.json
+++ b/package.json
@@ -7,12 +7,58 @@
         "url"   : "http://dmitry.baranovskiy.com"
     },
 	"description" : "Simple custom events",
-    "version" : "0.5.2",
+    "license": "Apache-2.0",
+    "version" : "0.5.3",
 
     "main"    : "./eve.js",
+
+    "devDependencies": {
+        "mocha": "*",
+        "expect.js": "*",
+        "eslint": "*",
+        "dr.js": "~0.1.0"
+    },
+
+    "scripts": {
+        "test": "./node_modules/eslint/bin/eslint.js eve.js",
+        "build": "node node_modules/dr.js/dr dr.json"
+    },
 
     "repository": {
         "type": "git",
         "url": "git@github.com:adobe-webplatform/eve.git"
+    },
+
+    "eslintConfig": {
+        "globals": {
+            "window": true,
+            "console": true
+        },
+        "rules": {
+            "block-scoped-var": 0,
+            "comma-dangle": 0,
+            "no-extra-parens": 1,
+            "no-shadow": 0,
+            "consistent-return": 0,
+            "eqeqeq": 0,
+            "no-new-wrappers": 0,
+            "no-sequences": 1,
+            "radix": 2,
+            "new-parens": 0,
+            "no-underscore-dangle": 0,
+            "no-path-concat": 0,
+            "strict": 0,
+            "camelcase": 0,
+            "no-extend-native": 0,
+            "no-loop-func": 0,
+            "new-cap": 0,
+            "no-unused-expressions": 0,
+            "no-mixed-requires": 0,
+            "quotes": [
+                1,
+                "double",
+                "avoid-escape"
+            ]
+        }
     }
 }
