--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     },
 	"description" : "Simple custom events",
     "license": "Apache-2.0",
-    "version" : "0.5.3",
+    "version" : "0.5.4",
 
     "main"    : "./eve.js",
 
@@ -20,7 +20,7 @@
     },
 
     "scripts": {
-        "test": "./node_modules/eslint/bin/eslint.js eve.js",
+        "test": "eslint eve.js",
         "build": "node node_modules/dr.js/dr dr.json"
     },
 
@@ -54,6 +54,15 @@
             "new-cap": 0,
             "no-unused-expressions": 0,
             "no-mixed-requires": 0,
+            "indent": ["error", 4, { "SwitchCase": 1, "VariableDeclarator": 1 }],
+            "no-multi-spaces": [0, {
+              "exceptions": {
+                "VariableDeclarator": true
+              }
+            }],
+            "no-trailing-spaces": [2, { "skipBlankLines": false }],
+            "no-unused-vars": [2, {"vars": "all", "args": "none"}],
+            "space-before-function-paren": [2, {"anonymous": "always", "named": "never"}],
             "quotes": [
                 1,
                 "double",
